2012-07-23  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-intelnm.c: Use
	_ipmi_oem_intelnm_bad_completion_code in additional situation.

2012-07-19  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Fix and support Wistron set-password-policy.
	
2012-07-18  Albert Chu <chu11@llnl.gov>
	
	* ipmi-oem/: Remove Wistron get-password-policy.
	
2012-07-16  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-intelnm.c (_ipmi_oem_intelnm_bad_completion_code):
	Handle bad completion code commonly for all Intel NM.

	* ipmi-oem/: Support Wistron get/set-password-policy.
	
2012-07-13  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/sdr/ipmi-sdr-oem.h,
	libfreeipmi/sdr/ipmi-sdr-oem.c: New files.

	* ipmi-sensors/ipmi-sensors.c,
	ipmi-sensors/ipmi-sensors-oem-intel-node-manager.c,
	ipmi-oem/ipmi-oem-intelnm.c,
	libfreeipmi/sel/ipmi-sel-string-intel-node-manager.c: Use new
	ipmi_sdr_oem_parse_intel_node_manager.

	* libfreeipmi/api/: Increase default ipmb timeout.
	
2012-07-10  Albert Chu <chu11@llnl.gov>

	Add new tool ipmiseld.

	* ipmiseld/: New tool.

	* common/, etc/, man/: Add new manpage entries, init scripts,
	config files, as needed.

	* man/manpage-common-troubleshooting-sel.man: Create new common
	SEL troubleshooting common manpage.

	* config/ac_ipmiseld_cache_dir.m4,
	config/ac_ipmiseld_config_file.m4: New files.

	* man/, freeipmi.spec.in, configure.ac: Update appropriately for
	new tool.

	* libfreeipmi/include/freeipmi/api/ipmi-api.h,
	libfreeipmi/api/ipmi-api.c: Move some internal macros to
	ipmi-api.h so apps know default values.
	
2012-07-10  Albert Chu <chu11@llnl.gov>

	Support OEM extensions for Wistron / Dell Poweredge C6220.

	* libfreeipmi/include/freeipmi/spec/ipmi-oem-spec.h: Rename
	several macros for use clarity.

	* ipmi-oem/: Add Wistron OEM extension commands.

	* ipmi-oem/ipmi-oem-thirdparty.h,
	ipmi-oem/ipmi-oem-thirdparty.c (ipmi_oem_thirdparty_get_system_info_block_pstring):
	New function.
