@@ -1,3 +1,7 @@
+2012-07-24  Albert Chu <chu11@llnl.gov>
+
+	* Fix error output message after confirmation from vendor on text.
+	
 2012-07-23  Albert Chu <chu11@llnl.gov>
 
 	* ipmi-oem/ipmi-oem-intelnm.c: Use
